Add MVP features: watchlists, portfolio, alerts with polished UI

--- a/src/app/api/quote/.env.local
+++ b/src/app/api/quote/.env.local
@@ -1,12 +1,12 @@
 # Database (Supabase)
-DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@YOUR_HOST:5432/postgres?sslmode=require
+DATABASE_URL=DATABASE_URL=postgresql://postgres:CharleeBrown28%24@db.ybhrypifmqrgzodqosuh.supabase.co:5432/postgres?sslmode=require
 
 # Upstash Redis (for later use)
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
 # Data providers
-FINNHUB_API_KEY=
+FINNHUB_API_KEY=d42j8vpr01qorlerlhegd42j8vpr01qorlerlhf0
 FRED_API_KEY=
 
 # Auth (we'll wire later; the secret just needs to be long/random)
