--- a/viper/package.json
+++ b/viper/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "@hookform/resolvers": "^3.9.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
